Added allow export to directive

--- a/client/one/partials/account_campaigns.html
+++ b/client/one/partials/account_campaigns.html
@@ -46,7 +46,9 @@
                     base-url="'api/accounts/' + $state.params.id + '/'"
                     options="exportPlusOptions"
                     columns="columns"
-                    order="order">
+                    order="order"
+                    level="level"
+                    export-sources="false">
                 </zem-export-plus>
             </div>
 
