--- a/client/one/partials/ad_group_contentadsplus.html
+++ b/client/one/partials/ad_group_contentadsplus.html
@@ -53,7 +53,9 @@
                     base-url="'api/ad_groups/' + $state.params.id + '/'"
                     options="exportPlusOptions"
                     columns="columns"
-                    order="order">
+                    order="order"
+                    level="level"
+                    export-sources="false">
                 </zem-export-plus>
             </div>
         </div>
