--- a/client/one/partials/ad_group_sources.html
+++ b/client/one/partials/ad_group_sources.html
@@ -46,7 +46,9 @@
                     base-url="'api/ad_groups/' + $state.params.id + '/sources/'"
                     options="exportPlusOptions"
                     columns="columns"
-                    order="order">
+                    order="order"
+                    level="level"
+                    export-sources="true">
                 </zem-export-plus>
             </div>
 
