--- a/client/one/partials/all_accounts_accounts.html
+++ b/client/one/partials/all_accounts_accounts.html
@@ -43,7 +43,9 @@
                     base-url="'api/accounts/'"
                     options="exportPlusOptions"
                     columns="columns"
-                    order="order">
+                    order="order"
+                    level="level"
+                    export-sources="false">
                 </zem-export-plus>
             </div>
 
