--- a/client/one/partials/campaign_ad_groups.html
+++ b/client/one/partials/campaign_ad_groups.html
@@ -38,7 +38,9 @@
                     base-url="'api/campaigns/' + $state.params.id + '/'"
                     options="exportPlusOptions"
                     columns="columns"
-                    order="order">
+                    order="order"
+                    level="level"
+                    export-sources="false">
                 </zem-export-plus>
             </div>
             <div class="clearfix"></div>
