--- a/client/one/partials/media_sources.html
+++ b/client/one/partials/media_sources.html
@@ -26,7 +26,9 @@
                     base-url="exportBaseUrl"
                     options="exportPlusOptions"
                     columns="columns"
-                    order="order">
+                    order="order"
+                    level="level"
+                    export-sources="true">
                 </zem-export-plus>
             </div>
 
