--- a/client/one/partials/zem_export_plus.html
+++ b/client/one/partials/zem_export_plus.html
@@ -2,7 +2,7 @@
     theme="select2"
     search-enabled="false"
     ng-model="export.type"
-    ng-change="downloadReport($select.selected.value)"
+    on-select="downloadReport($select.selected.value)"
     class="export">
     <ui-select-match placeholder="Download Report">Download Report</ui-select-match>
     <ui-select-choices repeat="option in options | filter:{hidden: '!true'}" ui-disable-choice="option.disabled">
