--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -1754,6 +1754,10 @@ div[datepicker] {
     }
 }
 
+.modal .modal-dialog.modal-wide {
+	width: 800px;
+}
+
 .page-ad-group-agency,
 .page-ad-group-settings {
     .alert-info {
