--- a/client/one/partials/account_credit_item_modal.html
+++ b/client/one/partials/account_credit_item_modal.html
@@ -11,19 +11,21 @@
 		</div>
 		<div class="form-group" ng-class="{'has-error': !!errors.startDate}">
             <label for="start-date-input" class="col-xs-3 control-label">
-                Valid from
+                Valid From
             </label>
-            <div class="col-xs-4">
-                <input id="start-date-input" type="text" class="form-control" datepicker-popup="M/d/yyyy" ng-model="creditItem.startDate" is-open="startDatePicker.isOpen" ng-click="openDatePicker('startDate')" ng-disabled="isSigned">
+            <div class="col-xs-4 input-group">
+                <input id="start-date-input" type="text" class="form-control" datepicker-popup="M/d/yyyy" ng-model="creditItem.startDate" min-date="today" is-open="startDatePicker.isOpen" ng-click="openDatePicker('startDate')" ng-disabled="isSigned">
+				<div class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></div>
             </div>
             <label ng-repeat="error in errors.startDate" class="col-xs-5 control-label error" for="start-date-input">{{ error }}</label>
         </div>
 		<div class="form-group" ng-class="{'has-error': !!errors.endDate}">
             <label for="end-date-input" class="col-xs-3 control-label">
-                Valid Toc
+                Valid To
             </label>
-            <div class="col-xs-4">
+            <div class="col-xs-4 input-group">
                 <input id="end-date-input" type="text" class="form-control" datepicker-popup="M/d/yyyy" ng-model="creditItem.endDate" min-date="minDate" is-open="endDatePicker.isOpen" ng-click="openDatePicker('endDate')">
+				<div class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></div>
             </div>
             <label ng-repeat="error in errors.endDate" class="col-xs-5 control-label error" for="end-date-input">{{ error }}</label>
         </div>
@@ -50,6 +52,7 @@
 				<div class="input-group">
 					<span class="input-group-addon">$</span>
 					<input id="amount-input" type="text" class="form-control" ng-model="creditItem.amount" ng-disabled="isSigned">
+					<div class="input-group-addon">.00</div>
 				</div>
             </div>
 
@@ -76,9 +79,9 @@
 			<table>
 				<thead>
 					<tr>
-						<th>Campaign</amount</th>
-333 th>
-						<th>Budget			<th>Total spend</th>
+						<th>Campaign</th>
+						<th>Budget</th>
+						<th>Total spend</th>
 						<th>Flight dates</th>
 					</tr>
 				</thead>
