--- a/client/one/partials/campaign_budget_item_modal.html
+++ b/client/one/partials/campaign_budget_item_modal.html
@@ -45,7 +45,7 @@
         </div>
 		<div class="form-group" ng-class="{'has-error': !!errors.amount}">
 			<label for="amount-input" class="col-xs-3 control-label">
-                Media Budget
+                Total Budget
             </label>
             <div class="col-xs-4">
 				<div class="input-group">
@@ -61,7 +61,7 @@
                 Notes
             </label>
             <div class="col-xs-4">
-                <textarea id="comment-input" type="text" class="form-control" ng-model="budgetItem.comment"></textarea>
+                <textarea id="comment-input" type="text" class="form-control" ng-model="budgetItem.comment" maxlength="256"></textarea>
             </div>
             <label ng-repeat="error in errors.comment" class="col-xs-5 control-label error" for="comment">{{ error }}</label>
 		</div>
