--- a/client/one/partials/zem_export_plus.html
+++ b/client/one/partials/zem_export_plus.html
@@ -2,7 +2,6 @@
     theme="select2"
     search-enabled="false"
     ng-model="export.type"
-    on-select="downloadReport($select.selected.value)"
     class="export">
     <ui-select-match placeholder="Download Report">Download Report</ui-select-match>
     <ui-select-choices repeat="option in options | filter:{hidden: '!true'}" ui-disable-choice="option.disabled">
@@ -13,7 +12,7 @@
            zem-lazy-popover-append-to-body="true">
             {{option.name}}
       </div>
-      <div ng-if="!option.disabled">
+      <div ng-if="!option.disabled" ng-click="downloadReport(option.value)">
             {{option.name}}
       </div>
     </ui-select-choices>
