additional updates to ui

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -10,7 +10,7 @@
 @internal-color: #0ab00a;
 @border-color: #e3e3e3;
 
-@updated-color: #dd771b;
+@updated-color: #dff0d8;
 
 @keyframes show-updated {
     0% { background-color: @updated-color; }
