--- a/client/one/partials/account_credit.html
+++ b/client/one/partials/account_credit.html
@@ -25,7 +25,7 @@
 					<th>Valid To</th>
 					<th>Signed</th>
 					<th>License Fee</th>
-					<th>Total Credit Amount</th>
+					<th>Credit Amount</th>
 					<th>Allocated Budgets</th>
 					<th>Available Credit</th>
 					<th>Actions</th>
@@ -58,7 +58,7 @@
 		<button type="button" class="btn btn-default" ng-click="addCreditItem()">Add Credit Item</button>
 	</div>
 	<div class="section active-credits" ng-show="!loadingInProgress">
-		<div class="title">Depleted Credit Items</div>
+		<div class="title">Past Credit Items</div>
 		<table>
 			<thead>
 				<tr>
