--- a/client/one/partials/campaign_budget_item_modal.html
+++ b/client/one/partials/campaign_budget_item_modal.html
@@ -21,7 +21,7 @@
 		
 		<div class="form-group" ng-class="{'has-error': !!errors.startDate}">
             <label for="start-date-input" class="col-xs-3 control-label">
-                Valid from
+                Start Date
             </label>
             <div class="col-xs-4">
 				<div class="input-group">
@@ -33,7 +33,7 @@
         </div>
 		<div class="form-group" ng-class="{'has-error': !!errors.endDate}">
             <label for="end-date-input" class="col-xs-3 control-label">
-                Valid To
+                End Date
             </label>
             <div class="col-xs-4">
 				<div class="input-group">
