--- a/client/one/partials/campaign_budget_plus.html
+++ b/client/one/partials/campaign_budget_plus.html
@@ -4,19 +4,19 @@
 		<!-- table>(thead>tr>td*5)+(tbody>tr>td*5) -->
 
 		<div class="section named-data">
-			<div class="name">Currently Available Active Total Budget</div>
+			<div class="name">Available Budget</div>
 			<div class="value">{{ budgetTotals.currentAvailable | decimalCurrency:"$":2 }}</div>
-			<div class="name bottomborder">Unallocated Account Credit</div>
+			<div class="name bottomborder">Available Credit</div>
 			<div class="value bottomborder">
 				{{ budgetTotals.currentUnallocated | decimalCurrency:"$":2 }}
 			</div>
-			<div class="name">Lifetime Campaign Spend</div>
+			<div class="name">Campaign Spend</div>
 			<div class="value">{{ budgetTotals.lifetimeCampaignSpend | decimalCurrency:"$":2 }}</div>
-			<div class="name">Lifetime Media Spend</div>
+			<div class="name">Media Spend</div>
 			<div class="value">{{ budgetTotals.lifetimeMediaSpend | decimalCurrency:"$":2 }}</div>
-			<div class="name">Lifetime Data Spend</div>
+			<div class="name">Data Spend</div>
 			<div class="value">{{ budgetTotals.lifetimeDataSpend | decimalCurrency:"$":2 }}</div>
-			<div class="name">Lifetime License Fee</div>
+			<div class="name">License Fee</div>
 			<div class="value">{{ budgetTotals.lifetimeLicenseFee | decimalCurrency:"$":2 }}</div>
 		</div>
 	</div>
@@ -27,7 +27,7 @@
                 <tr>
                     <th>Start Date</th>
                     <th>End Date</th>
-                    <th>Total Budget</th>
+                    <th>Budget</th>
                     <th>License Fee</th>
 					<th>Total Spend</th>
                     <th>Available Budget</th>
@@ -49,7 +49,7 @@
 					
 					<td>
 						<ul class="row-actions">
-							<li ng-click="editBudgetItem(item.id)">edit</li>
+							<li ng-click="editBudgetItem(item.id)" ng-if="item.isEditable">edit</li>
 						</ul>
 					</td>
 				</tr>
