insertion orders renamed to bcm, extended select changed to table, fixed some bugs

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -1748,6 +1748,10 @@ div[datepicker] {
             &.outline {
                 font-weight: 900 !important;
             }
+
+			&.text-row {
+				max-width: 200px;
+			}
         }
 		
 		tr.message td {
@@ -1765,6 +1769,9 @@ div[datepicker] {
         max-height: 200px;
         overflow: auto;
     }
+	.form-group table {
+		border: 1px solid @border-color;
+	}
 }
 
 .modal .modal-dialog.modal-wide {
