--- a/client/one/partials/copy_conversion_pixel_modal.html
+++ b/client/one/partials/copy_conversion_pixel_modal.html
@@ -9,7 +9,9 @@
 
         <div class="form-group">
             <div class="col-xs-12 notice">
-                The conversion pixel should be included in the web page at the point of conversion.
+                <h5>Where do I place my conversion pixel on my site?</h5>
+                <p> Conversion pixels need to be properly placed in order to measure goals effectively. We recommend placing your conversion pixel on the confirmation page which is shown to a person after the desired action is performed.
+                </p>
             </div>
         </div>
 
